--- a/.github/workflows/tfmodule.yml
+++ b/.github/workflows/tfmodule.yml
@@ -8,6 +8,15 @@ on:
       - 'main'
   workflow_dispatch:
 
+env:
+  ARM_CLIENT_ID: '2c7dadc2-5dba-4670-b798-27d59a430217'
+  ARM_CLIENT_SECRET: ${{ secrets.TGO_ARM_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: 'e5c064d7-9c8f-4e8d-ba57-5da9f1610cb3'
+  ARM_TENANT_ID: 'ea7c73d0-fb18-4161-8331-8341717ba99c'
+  TF_CLI_VERSION: '1.0.9'
+  TF_VAR_gh_run_id: ${{ env.GITHUB_RUN_ID }}
+  TF_VAR_gh_repo: ${{ env.GITHUB_REPOSITORY }}
+
 jobs:
   # tflint:
   terrascan:
@@ -48,7 +57,7 @@ jobs:
     - uses: hashicorp/setup-terraform@v1
       with:
         terraform_wrapper: false
-        terraform_version: 1.0.8
+        terraform_version: ${{ env.TF_CLI_VERSION }}
 
     - name: Set up Go
       uses: actions/setup-go@v2
