--- a/.github/workflows/tfmodule.yml
+++ b/.github/workflows/tfmodule.yml
@@ -69,7 +69,10 @@ jobs:
 
     - name: Test
       working-directory: tests
-      run: go test -v
+      run: |
+        echo "TF_VAR_gh_run_id: ${TF_VAR_gh_run_id}"
+        echo "TF_VAR_gh_repo: ${TF_VAR_gh_repo}"
+        go test -v
       env:
         TF_VAR_gh_run_id: ${{ env.GITHUB_RUN_ID }}
         TF_VAR_gh_repo: ${{ env.GITHUB_REPOSITORY }}
