--- a/.github/workflows/tfmodule.yml
+++ b/.github/workflows/tfmodule.yml
@@ -69,13 +69,7 @@ jobs:
 
     - name: Test
       working-directory: tests
-      run: |
-        echo "TF_VAR_gh_run_id: ${GITHUB_RUN_ID}"
-        echo "TF_VAR_gh_repo: ${TF_VAR_gh_repo}"
-        go test -v
-      env:
-        TF_VAR_gh_run_id: ${{ env.GITHUB_RUN_ID }}
-        TF_VAR_gh_repo: ${{ env.GITHUB_REPOSITORY }}
+      run: go test -v
 
     - name: Bump version and push tag
       id: tag_version
