--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
-name: Terraform Module Build
+name: Release
 on:
-  push:
-    branches:
-      - 'main'
+  workflow_run:
+    workflows: ["Terraform Tests"]
+    branches: [main]
+    types:
+      - completed
 
 jobs:
   release:
