--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,8 @@ name: Release
 on:
   workflow_run:
     workflows: ["Terraform Tests"]
-    branches: [main]
+    branches:
+      - "main"
     types:
       - completed
 
