--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,11 @@ jobs:
   terratest_job:
     runs-on: ubuntu-latest
     name: terratest-action
+    env:
+      AZURE_TENANT_ID: ${{ env.ARM_TENANT_ID }}
+      AZURE_CLIENT_ID: ${{ env.ARM_CLIENT_ID }}
+      AZURE_CLIENT_SECRET: ${{ env.ARM_CLIENT_SECRET }}
+      AZURE_SUBSCRIPTION_ID: ${{ env.ARM_SUBSCRIPTION_ID }}
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
