--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ env:
   ARM_SUBSCRIPTION_ID: 'e5c064d7-9c8f-4e8d-ba57-5da9f1610cb3'
   ARM_TENANT_ID: 'ea7c73d0-fb18-4161-8331-8341717ba99c'
   TF_CLI_VERSION: '1.0.9'
+  TERRATEST_TIMEOUT: 25m
 jobs:
   # tflint:
   terrascan:
@@ -68,4 +69,4 @@ jobs:
 
     - name: Test
       working-directory: tests
-      run: go test -v
+      run: go test -v -timeout $TERRATEST_TIMEOUT
