--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ on:
     branches:
       - 'main'
   workflow_dispatch:
+    branches:
+      - '*'
 
 env:
   ARM_CLIENT_ID: '2c7dadc2-5dba-4670-b798-27d59a430217'
@@ -48,7 +50,7 @@ jobs:
 
   terratest_job:
     runs-on: ubuntu-latest
-    name: terratest-action
+    name: terratest
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -71,3 +73,22 @@ jobs:
     - name: Test
       working-directory: tests
       run: go test -v -timeout $TERRATEST_TIMEOUT
+
+  release_job:
+    runs-on: ubuntu-latest
+    name: release
+    steps:
+    - name: Bump version and push tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v5.6
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    - name: Create a GitHub release
+      uses: ncipollo/release-action@v1
+      with:
+        tag: ${{ steps.tag_version.outputs.new_tag }}
+        name: Release ${{ steps.tag_version.outputs.new_tag }}
+        body: ${{ steps.tag_version.outputs.changelog }}
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
