--- a/.github/workflows/terraform-module-ci.yml
+++ b/.github/workflows/terraform-module-ci.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     name: debug-me
     steps:
-      - run: echo ${ARM_SUBSCRIPTION_ID}
+      - run: echo "$ARM_SUBSCRIPTION_ID"
     env:
       ARM_SUBSCRIPTION_ID:  ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
