--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+.DS_Store
+
 *.tfvars
 .terraform.lock.hcl
 *.key
 .terraform
-.test-data
 **.tfstate*
-.DS_Store
-*.go
+
+.test-data
+TerraformOptions.json
+test_output
+test_output.log
