--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
       args: ["markdown", "--output-file", "README.md", "./"]
 
 - repo: https://github.com/bridgecrewio/checkov.git
-  rev: '2.0.903'
+  rev: '2.0.914'
   hooks:
     - id: checkov
-      args: [--soft-fail]
+      args: [--soft-fail, --framework, 'terraform', --directory, '.']
