--- a/.github/workflows/terraform-module-ci.yml
+++ b/.github/workflows/terraform-module-ci.yml
@@ -14,17 +14,17 @@ env:
 
 jobs:
   tflint:
-    uses: Diehlabs/shared-workflows/.github/workflows/tflint.yml@feature/develop
+    uses: Diehlabs/shared-workflows/.github/workflows/tflint.yml@main
 
   checkov:
-    uses: Diehlabs/shared-workflows/.github/workflows/checkov.yml@feature/develop
+    uses: Diehlabs/shared-workflows/.github/workflows/checkov.yml@main
     with:
       directory: ${{ github.workspace }}/examples/build
     needs: tflint
     if: success()
 
   terratest:
-    uses: Diehlabs/shared-workflows/.github/workflows/terratest.yml@feature/develop
+    uses: Diehlabs/shared-workflows/.github/workflows/terratest.yml@main
     needs: tflint
     if: success()
     secrets:
@@ -34,7 +34,7 @@ jobs:
       ARM_SUBSCRIPTION_ID:  ${{ secrets.ARM_SUBSCRIPTION_ID }}
 
   release:
-    uses: Diehlabs/shared-workflows/.github/workflows/github-release.yml@feature/develop
+    uses: Diehlabs/shared-workflows/.github/workflows/github-release.yml@main
     needs:
       - tflint
       - terratest
